updating setup script and 2.1 config

--- a/aqua-ethos-setup/config.json
+++ b/aqua-ethos-setup/config.json
@@ -1,4 +1,5 @@
 {
+  "version": "2.1",
   "integration": {
     "registries": [
       {
@@ -37,12 +38,12 @@
       {
         "name": "image.policy",
         "type": "image.policy",
-        "settings": "{\"author\": \"administrator\", \"average_score\": 7.5, \"maximum_score\": 8, \"daily_scan_time\": {\"hour\": 1, \"minute\": 0, \"second\": 0}, \"daily_scan_enabled\": true, \"only_none_root_users\": false, \"average_score_enabled\": false, \"maximum_score_enabled\": false, \"only_registered_images\": true, \"cves_black_list_enabled\": false, \"agent_image_scan_enabled\": false, \"packages_black_list_enabled\": false}"
+        "settings": "{\"author\": \"administrator\", \"average_score\": 7.5, \"maximum_score\": 8, \"daily_scan_time\": {\"hour\": 1, \"minute\": 0, \"second\": 0}, \"daily_scan_enabled\": true, \"only_none_root_users\": false, \"average_score_enabled\": false, \"maximum_score_enabled\": false, \"only_registered_images\": true, \"cves_black_list_enabled\": true, \"agent_image_scan_enabled\": false, \"packages_black_list_enabled\": false, \"trusted_base_images_enabled\": false}"
       },
       {
         "name": "runtime_policy",
         "type": "runtime.policy",
-        "settings": "{\"enable_fork_guard\": false, \"block_nw_unlink_cont\": true, \"enable_ip_reputation\": false, \"default_security_profile\": \"Ethos\", \"fork_guard_process_limit\": 100, \"enable_port_scan_protection\": false}"
+        "settings": "{\"enable_fork_guard\": false, \"block_nw_unlink_cont\": true, \"enable_ip_reputation\": true, \"default_security_profile\": \"Ethos\", \"fork_guard_process_limit\": 100, \"enable_port_scan_protection\": true}"
       }
     ]
   },
@@ -60,10 +61,12 @@
         "average_score": 7.5,
         "maximum_score_enabled": false,
         "maximum_score": 8,
-        "author": "administrator",
-        "cves_black_list_enabled": false,
+        "cves_black_list_enabled": true,
         "packages_black_list_enabled": false,
+        "author": "administrator",
         "agent_image_scan_enabled": false,
+        "only_none_root_users": false,
+        "trusted_base_images_enabled": false,
         "cves_black_list": [
           "CVE-2012-1723",
           "CVE-2013-2465",
@@ -75,7 +78,7 @@
         ],
         "packages_black_list": null,
         "allowed_images": null,
-        "only_none_root_users": false
+        "trusted_base_images": null
       }
     ],
     "threat_mitigation": [
@@ -83,8 +86,8 @@
         "default_security_profile": "Ethos",
         "enable_fork_guard": false,
         "fork_guard_process_limit": 100,
-        "enable_ip_reputation": false,
-        "enable_port_scan_protection": false,
+        "enable_ip_reputation": true,
+        "enable_port_scan_protection": true,
         "block_nw_unlink_cont": true
       }
     ],
@@ -95,12 +98,13 @@
         "type": "security.profile",
         "author": "administrator",
         "version": "1.0",
-        "lastupdate": 1491322777,
-        "enforce": true,
+        "lastupdate": 1487346450,
+        "enforce": false,
         "block_inbound_connections": false,
         "block_outbound_connections": false,
         "readonly_root": false,
         "readonly_files": null,
+        "exceptional_readonly_files": null,
         "separate_executables": false,
         "allow_executables": null,
         "allow_root_executables": null,
@@ -116,12 +120,12 @@
           "unit": ""
         },
         "max_processes": 0,
-        "encrypt_all_envs": true,
+        "encrypt_all_envs": false,
         "encrypt_env_vars": null,
         "exec_lockdown": false,
         "image_lockdown": false,
         "prevent_privileged": false,
-        "seccomp_profile": "{\n\t\"defaultAction\": \"SCMP_ACT_ERRNO\",\n\t\"syscalls\": [\n\t\t{\n\t\t\t\"names\": [\n\t\t\t\t\"capget\",\n\t\t\t\t\"capset\",\n\t\t\t\t\"chdir\",\n\t\t\t\t\"fchown\",\n\t\t\t\t\"futex\",\n\t\t\t\t\"getdents64\",\n\t\t\t\t\"getpid\",\n\t\t\t\t\"getppid\",\n\t\t\t\t\"lstat\",\n\t\t\t\t\"openat\",\n\t\t\t\t\"prctl\",\n\t\t\t\t\"setgid\",\n\t\t\t\t\"setgroups\",\n\t\t\t\t\"setuid\",\n\t\t\t\t\"stat\",\n\t\t\t\t\"rt_sigaction\",\n\t\t\t\t\"mprotect\",\n\t\t\t\t\"brk\",\n\t\t\t\t\"close\",\n\t\t\t\t\"open\",\n\t\t\t\t\"write\",\n\t\t\t\t\"mmap\",\n\t\t\t\t\"rt_sigprocmask\",\n\t\t\t\t\"sched_getaffinity\",\n\t\t\t\t\"arch_prctl\",\n\t\t\t\t\"access\",\n\t\t\t\t\"getrandom\",\n\t\t\t\t\"sigaltstack\",\n\t\t\t\t\"getrlimit\",\n\t\t\t\t\"set_tid_address\",\n\t\t\t\t\"fstat\",\n\t\t\t\t\"stat\",\n\t\t\t\t\"setsockopt\",\n\t\t\t\t\"read\",\n\t\t\t\t\"openat\",\n\t\t\t\t\"clone\",\n\t\t\t\t\"set_robust_list\",\n\t\t\t\t\"ioctl\",\n\t\t\t\t\"execve\",\n\t\t\t\t\"gettid\",\n\t\t\t\t\"socket\",\n\t\t\t\t\"munmap\",\n\t\t\t\t\"futex\",\n\t\t\t\t\"bind\"\n\t\t\t],\n\t\t\t\"action\": \"SCMP_ACT_ALLOW\",\n\t\t\t\"args\": [],\n\t\t\t\"comment\": \"Necessary syscalls for working of container\",\n\t\t\t\"includes\": {},\n\t\t\t\"excludes\": {}\n\t\t}\n\t]\n}",
+        "seccomp_profile": "",
         "drop_capabilities": null,
         "volumes": null,
         "use_host_user": false
@@ -146,6 +150,9 @@
         "version": "2.0",
         "block_icmp_ping": false
       }
+    ],
+    "user_access_control": [
+      "{\"name\": \"ethos\", \"role\": \"administrator\", \"author\": \"administrator\", \"version\": \"2.0\", \"accessors\": {\"users\": [\"core\"], \"groups\": [\"core\"]}, \"resources\": {\"apps\": [\"*\"], \"nodes\": [\"*\"], \"images\": [\"*\"], \"secrets\": [\"*\"], \"volumes\": [\"*\"], \"networks\": [\"*\"], \"services\": [\"*\"], \"containers\": [\"*\"], \"aqua_labels\": [\"*\"]}, \"lastupdate\": 1491249828, \"description\": \"\"}"
     ]
   },
   "images": [],
@@ -153,7 +160,7 @@
     {
       "name": "production approved",
       "description": "",
-      "created": "2017-04-04T16:29:19.848247Z",
+      "created": "2017-04-03T14:37:22.148217Z",
       "author": "administrator"
     }
   ]
