--- a/aqua-ethos-setup/config.json
+++ b/aqua-ethos-setup/config.json
@@ -50,14 +50,14 @@
         "description": "",
         "author": "administrator",
         "lastupdate": 1491322777,
-        "url": "ETH_ARTIFACTORY_URL_MC",
-        "username": "ETH_ARTIFACTORY_USERNAME_MC",
-        "password": "ETH_ARTIFACTORY_PASSWORD_MC",
+        "url": "ETH_MC_ARTIFACTORY_URL",
+        "username": "ETH_MC_ARTIFACTORY_USERNAME",
+        "password": "ETH_MC_ARTIFACTORY_PASSWORD",
         "auto_pull": false,
         "auto_pull_time": "03:00",
         "auto_pull_max": 100,
         "prefixes": [
-          "ETH_ARTIFACTORY_PREFIX_MC"
+          "ETH_MC_ARTIFACTORY_PREFIX"
         ],
         "webhook": {
           "enabled": false,
