fixing mc artifactory name

--- a/aqua-ethos-setup/config.json
+++ b/aqua-ethos-setup/config.json
@@ -45,7 +45,7 @@
         }
       },
       {
-        "name": "artifactory-mc",
+        "name": "ETH_MC_ARTIFACTORY_PREFIX",
         "type": "ART",
         "description": "",
         "author": "administrator",
