update artifactory name from hard coded value

--- a/aqua-ethos-setup/config.json
+++ b/aqua-ethos-setup/config.json
@@ -3,7 +3,7 @@
   "integration": {
     "registries": [
       {
-        "name": "artifactory-admin",
+        "name": "ETH_ARTIFACTORY_PREFIX",
         "type": "ART",
         "description": "",
         "author": "administrator",
