--- a/aqua-ethos-setup/config.json
+++ b/aqua-ethos-setup/config.json
@@ -45,6 +45,27 @@
         }
       },
       {
+        "name": "ETH_ECR_PREFIX_DEV",
+        "type": "AWS",
+        "description": "",
+        "author": "administrator",
+        "lastupdate": 1494351625,
+        "url": "ETH_ECR_REGION_DEV",
+        "username": "ETH_ECR_USERNAME_DEV",
+        "password": "ETH_ECR_PASSWORD_DEV",
+        "auto_pull": false,
+        "auto_pull_time": "03:00",
+        "auto_pull_max": 100,
+        "prefixes": [
+          "ETH_ECR_PREFIX_DEV"
+        ],
+        "webhook": {
+          "enabled": false,
+          "url": "",
+          "auth_token": ""
+        }
+      },
+      {
         "name": "ETH_MC_ARTIFACTORY_PREFIX",
         "type": "ART",
         "description": "",
